popuulate bank data
