# router.go
@@ -2,7 +2,6 @@ package main
 
 import (
 	"fmt"
-	"math/rand"
 	"net/http"
 
 	"github.com/gorilla/mux"
@@ -11,14 +10,6 @@ import (
 	httpSwagger "github.com/swaggo/http-swagger"
 )
 
-// Route partners
-// @Summary Get all partners
-// @ID partners
-// @Accept  json
-// @Produce  json
-// @Param   some_id      path   int     true  "Some ID"
-// @Success 200 {object} Partner
-// @Router /partners/ [get]
 func Route(r *mux.Router, dbPointer **gorm.DB) {
 	db := *dbPointer
 
@@ -31,151 +22,60 @@ func Route(r *mux.Router, dbPointer **gorm.DB) {
 	r.HandleFunc("/register", Register(db)).Methods("POST")
 
 	// Generate secure JWT secret
-	r.HandleFunc("/generate", func(w http.ResponseWriter, r *http.Request) {
-		letters := []rune("abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890")
-
-		b := make([]rune, 64)
-		for i := range b {
-			b[i] = letters[rand.Intn(len(letters))]
-		}
-
-		fmt.Fprintf(w, "%s", string(b))
-	}).Methods("GET")
+	r.HandleFunc("/generate", GenerateJwt(db)).Methods("GET")
 
 	// User
-	r.HandleFunc("/users", func(w http.ResponseWriter, r *http.Request) {
-		var users []User
-		All(db, &users, w, r)
-	}).Methods("GET")
-
-	r.HandleFunc("/users/{id}", func(w http.ResponseWriter, r *http.Request) {
-		var user User
-		Get(db, &user, w, r)
-	}).Methods("GET")
-
-	r.HandleFunc("/users/{id}", func(w http.ResponseWriter, r *http.Request) {
-		var user User
-		Delete(db, &user, w, r)
-	}).Methods("DELETE")
-
-	r.HandleFunc("/users", func(w http.ResponseWriter, r *http.Request) {
-		var user User
-		Post(db, &user, w, r)
-	}).Methods("POST")
-
+	r.HandleFunc("/users", AllUsers(db)).Methods("GET")
+	r.HandleFunc("/users/{id}", GetUser(db)).Methods("GET")
+	r.HandleFunc("/users/{id}", DeleteUser(db)).Methods("DELETE")
+	r.HandleFunc("/users", GetUser(db)).Methods("POST")
 	r.HandleFunc("/users/{id}/view", ViewUser(db)).Methods("GET")
 	r.HandleFunc("/userssave", SaveUser(db)).Methods("POST")
 
 	// Role
+	r.HandleFunc("/roles", AllRoles(db)).Methods("GET")
+	r.HandleFunc("/roles/{id}", GetRole(db)).Methods("GET")
+	r.HandleFunc("/roles/{id}", DeleteRole(db)).Methods("DELETE")
+	r.HandleFunc("/roles", PostUser(db)).Methods("POST")
 
 	// Building
-	r.HandleFunc("/buildings", func(w http.ResponseWriter, r *http.Request) {
-		var buildings []Building
-		All(db, &buildings, w, r)
-	}).Methods("GET")
-
-	r.HandleFunc("/buildings/{id}", func(w http.ResponseWriter, r *http.Request) {
-		var building Building
-		Get(db, &building, w, r)
-	}).Methods("GET")
-
-	r.HandleFunc("/buildings/{id}", func(w http.ResponseWriter, r *http.Request) {
-		var building Building
-		Delete(db, &building, w, r)
-	}).Methods("DELETE")
-
-	r.HandleFunc("/buildings", func(w http.ResponseWriter, r *http.Request) {
-		var building Building
-		Post(db, &building, w, r)
-	}).Methods("POST")
+	r.HandleFunc("/buildings", AllBuildings(db)).Methods("GET")
+	r.HandleFunc("/buildings/{id}", GetBuilding(db)).Methods("GET")
+	r.HandleFunc("/buildings/{id}", DeleteBuilding(db)).Methods("DELETE")
+	r.HandleFunc("/buildings", PostBuilding(db)).Methods("POST")
 
 	// Partner
-	// ShowPartners godoc
-	// @Summary show partners
-	// @Router /partners [get]
-	// @Produce json
-	r.HandleFunc("/partners", func(w http.ResponseWriter, r *http.Request) {
-		var partners []Partner
-		All(db, &partners, w, r)
-	}).Methods("GET")
-
-	// GetStringByInt example
-	// @Summary Add a new pet to the store
-	// @Description get string by ID
-	// @ID get-string-by-int
-	// @Accept  json
-	// @Produce  json
-	// @Param   some_id      path   int     true  "Some ID"
-	// @Success 200 {string} string	"ok"
-	// @Router /testapi/get-string-by-int/{some_id} [get]
-	// @Router /accounts/{id} [get]
-	r.HandleFunc("/partners/{id}", func(w http.ResponseWriter, r *http.Request) {
-		var partner Partner
-		Get(db, &partner, w, r)
-	}).Methods("GET")
-
-	r.HandleFunc("/partners/{id}", func(w http.ResponseWriter, r *http.Request) {
-		var partner Partner
-		Delete(db, &partner, w, r)
-	}).Methods("DELETE")
-
-	r.HandleFunc("/partners", func(w http.ResponseWriter, r *http.Request) {
-		var partner Partner
-		Post(db, &partner, w, r)
-	}).Methods("POST")
-
+	r.HandleFunc("/partners", AllPartners(db)).Methods("GET")
+	r.HandleFunc("/partners/{id}", GetPartner(db)).Methods("GET")
+	r.HandleFunc("/partners/{id}", DeletePartner(db)).Methods("DELETE")
+	r.HandleFunc("/partners", PostPartner(db)).Methods("POST")
 	r.HandleFunc("/partnersregister", PartnerRegisterHandler(db))
 	r.HandleFunc("/partnersview", PartnersView(db)).Methods("GET")
 	r.HandleFunc("/partners/{id}/view", PartnerView(db)).Methods("GET")
 
 	// Businesses
-	r.HandleFunc("/businesses", func(w http.ResponseWriter, r *http.Request) {
-		var businesses []Business
-		All(db, &businesses, w, r)
-	}).Methods("GET")
+	r.HandleFunc("/businesses", AllBusinesses(db)).Methods("GET")
+	r.HandleFunc("/businesses/{id}", GetBusiness(db)).Methods("GET")
+	r.HandleFunc("/businesses/{id}", DeleteBusiness(db)).Methods("DELETE")
+	r.HandleFunc("/businesses", PostBusiness(db)).Methods("POST")
 
 	// Service Types
-	r.HandleFunc("/servicetypes", func(w http.ResponseWriter, r *http.Request) {
-		var serviceTypes []ServiceType
-		All(db, &serviceTypes, w, r)
-	}).Methods("GET")
+	r.HandleFunc("/servicetypes", AllServiceTypes(db)).Methods("GET")
+	r.HandleFunc("/servicetypes/{id}", GetServiceType(db)).Methods("GET")
+	r.HandleFunc("/servicetypes/{id}", DeleteServiceType(db)).Methods("DELETE")
+	r.HandleFunc("/servicetypes", PostServiceType(db)).Methods("POST")
 
 	// Room
-
-	// r.HandleFunc("/test", func(w http.ResponseWriter, r *http.Request) {
-	// 	w.Header().Set("Content-Type", "application/json")
-	// 	var users []User
-	// 	db.Find(&users)
-
-	// 	json.NewEncoder(w).Encode(users)
-	// })
-
-	// r.HandleFunc("/testadd", func(w http.ResponseWriter, r *http.Request) {
-	// 	user := User{
-	// 		Name:     "Valian",
-	// 		Username: "valian",
-	// 		Password: "mypassword"}
-
-	// 	db.Save(&user)
-	// })
+	r.HandleFunc("/rooms", AllRooms(db)).Methods("GET")
+	r.HandleFunc("/rooms/{id}", GetRoom(db)).Methods("GET")
+	r.HandleFunc("/rooms/{id}", DeleteRoom(db)).Methods("DELETE")
+	r.HandleFunc("/rooms", PostRoom(db)).Methods("POST")
 
 	// ComingSoonEmail
-	r.HandleFunc("/coming-soon-emails", func(w http.ResponseWriter, r *http.Request) {
-		var comingSoonEmails []ComingSoonEmail
-		All(db, &comingSoonEmails, w, r)
-	}).Methods("GET")
-
-	r.HandleFunc("/coming-soon-emails", func(w http.ResponseWriter, r *http.Request) {
-		var comingSoonEmail ComingSoonEmail
-		Post(db, &comingSoonEmail, w, r)
-	}).Methods("POST")
-
-	// Populator
-	r.HandleFunc("/populate", Populate(db)).Methods("GET")
-
-	r.HandleFunc("/populate/servicetypes", func(w http.ResponseWriter, r *http.Request) {
-		PopulateServiceType(db)
-	}).Methods("GET")
+	r.HandleFunc("/coming-soon-emails", AllComingSoonEmails(db)).Methods("GET")
+	r.HandleFunc("/coming-soon-emails/{id}", GetComingSoonEmail(db)).Methods("GET")
+	r.HandleFunc("/coming-soon-emails/{id}", DeleteComingSoonEmail(db)).Methods("DELETE")
+	r.HandleFunc("/coming-soon-emails", PostComingSoonEmail(db)).Methods("POST")
 
 	r.PathPrefix("/swagger/").Handler(httpSwagger.Handler(
 		httpSwagger.URL("http://localhost:8080/swagger/doc.json"), //The url pointing to API definition
